src/main/kotlin/org/example/firstkopring/global/error/GlobalExceptionFilter.kt
package org.example.firstkopring.global.error

import com.fasterxml.jackson.databind.ObjectMapper
import jakarta.servlet.FilterChain
import jakarta.servlet.http.HttpServletRequest
import jakarta.servlet.http.HttpServletResponse
import org.example.firstkopring.global.error.exception.BusinessException
import org.example.firstkopring.global.error.exception.ErrorCode
import org.springframework.web.filter.OncePerRequestFilter

class GlobalExceptionFilter(
    private val objectMapper: ObjectMapper
): OncePerRequestFilter() {


    override fun doFilterInternal(
        request: HttpServletRequest,
        response: HttpServletResponse,
        filterChain: FilterChain
    )  {
        try {
            filterChain.doFilter(request, response)
        } catch (e: BusinessException) {
            val errorCode: ErrorCode = e.errorCode
            writerErrorResponse(
                response,
                errorCode.statusCode,
                ErrorResponse.of(errorCode, e.errorCode.message)
            )
        }
    }

    fun writerErrorResponse(
        response: HttpServletResponse,
        statusCode: Int,
        errorResponse: ErrorResponse,
    ) {
        response.status = statusCode
        response.contentType = "application/json"
        response.characterEncoding = "UTF-8"
        objectMapper.writeValue(response.writer, errorResponse)
    }
}